feat(): updated openapi json
